Updated project to run with JDK 17